corrected twitter link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
 
       <p class="text--bigger  text--center  download-button  margin--top-bottom-two-spaces">Coming soon for iOS!</p>
-      <footer>&copy; Copyright 2014 &nbsp; &bull; &nbsp; Follow <a href="#" target="_blank">@stagedoorapp</a> for updates.</footer>
+      <footer>&copy; Copyright 2014 &nbsp; &bull; &nbsp; Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</footer>
     </section>
   </div>
 
