added features to site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-gb">
 
 <head>
-  <title>Stagedoor</title>
+  <title>Stagedoor - The must-have app for the London theatre lover</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
@@ -36,22 +36,44 @@
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
     </section>
 
-    <section class="float--left  width--40">
-      <img src="images/screenshot.png" alt="" class="iphone-screenshot" />
+    <section class="cf">
+      <div class="float--left  width--40">
+        <img src="images/screenshot.png" alt="stagedoor app theatre screenshot" class="iphone-screenshot" />
+      </div>
+
+      <div class="float--right  width--60  margin--top-six-spaces">
+        <header class="padding--bottom-one-space  hide-on-mobile">
+          <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" />
+          <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
+        </header>
+
+        <h1 class="padding--top-bottom-one-space">The must-have app for the London theatre lover.</h1>
+        <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
+        <p class="text--bigger  text--center  download-button  margin--top-two-spaces">Coming soon for iOS!</p>
+        <small class="opacity--50  padding--top-half-space">Full support for iOS 8, iPhone 4S and above.</small>
+      </div>
     </section>
 
-    <section class="float--right  width--60  margin--top-four-spaces">
-      <header class="padding--bottom-one-space  hide-on-mobile">
-        <img src="images/apple-touch-icon.png" alt="" class="appicon  block--inline  vertical-align--middle" />
-        <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-      </header>
-
-      <h1 class="padding--top-bottom-one-space">The must-have app for the London theatre lover.</h1>
-      <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
-
-      <p class="text--bigger  text--center  download-button  margin--top-bottom-two-spaces">Coming soon for iOS!</p>
-      <footer>&copy; Copyright 2014 &nbsp; &bull; &nbsp; Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</footer>
+    <section class="margin--top-bottom-four-spaces">
+      <div class="columns--3">
+        <div>
+          <h2>Never miss out</h2>
+          <p class="text--bigger">Discover everything about that performance you wish to go to. Saved performances are automatically added to your calendar &mdash; <a href="https://twitter.com/hashtag/nevermissout" target="_blank" title="Nevermissout hashtag on Twitter">#nevermissout</a>.</p>
+        </div>
+        <div>
+          <h2>More than musicals</h2>
+          <p class="text--bigger">Theatre lovers can drill-in and find amazing performances using our 12 theatre-specific categories and recommendation engine.</p>
+        </div>
+        <div>
+          <h2>Stay up-to-date</h2>
+          <p class="text--bigger">Be the first to learn about the next big thing. Follow directors, writers, cast, and venues, so you already know what&rsquo;s on.</p>
+        </div>
+      </div>
     </section>
+
+    <footer class="opacity--50  text--center  padding--bottom-one-space">
+      &copy; Copyright 2015 &nbsp; &bull; &nbsp; Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.
+    </footer>
   </div>
 
 
@@ -69,7 +91,6 @@
 
     ga('create', 'UA-58426547-1', 'auto');
     ga('send', 'pageview');
-
   </script>
 </body>
 </html>
