--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 &nbsp; &bull; &nbsp; Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.
+      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
     </footer>
   </div>
 
