added privacy policy

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1 class="padding--top-bottom-one-space">The must-have app for the London theatre lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  text--center  download-button  margin--top-two-spaces">Coming soon for iOS!</p>
-        <small class="opacity--50  padding--top-half-space">Full support for iOS 8, iPhone 4S and above.</small>
+        <small class="opacity--50  padding--top-half-space">Full support for iOS 7, iPhone 4S and above.</small>
       </div>
     </section>
 
@@ -66,7 +66,7 @@
         </div>
         <div>
           <h2>Stay up-to-date</h2>
-          <p class="text--bigger">Be the first to learn about the next big thing. Follow directors, writers, cast, and venues, so you already know what&rsquo;s on.</p>
+          <p class="text--bigger">Follow directors, writers, cast, and venues, so you already know what&rsquo;s on. Be the first to find out about the next big thing.</p>
         </div>
       </div>
     </section>
