--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <p class="text--bigger">Discover everything about that performance you wish to go to. Saved performances are automatically added to your calendar &mdash; <a href="https://twitter.com/hashtag/nevermissout" target="_blank" title="Nevermissout hashtag on Twitter">#nevermissout</a>.</p>
         </div>
         <div>
-          <h2>More than musicals</h2>
-          <p class="text--bigger">Theatre lovers can drill-in and find amazing performances using our 12 theatre-specific categories and recommendation engine.</p>
+          <h2>Go beyond musicals</h2>
+          <p class="text--bigger">Theatre lovers can drill-in and find amazing performances using our 12 theatre-specific categories and custom recommendation engine.</p>
         </div>
         <div>
           <h2>Stay up-to-date</h2>
