--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
       <div class="columns--3">
         <div>
           <h2>Never miss out</h2>
-          <p class="text--bigger">Discover everything about that performance you wish to go to. Saved performances are automatically added to your calendar &mdash; <a href="https://twitter.com/hashtag/nevermissout" target="_blank" title="Nevermissout hashtag on Twitter">#nevermissout</a>.</p>
+          <p class="text--bigger">Discover everything about the theatre performances you want to see and save them in your calendar so that you <a href="https://twitter.com/hashtag/nevermissout" target="_blank" title="Nevermissout hashtag on Twitter">#nevermissout</a>.</p>
         </div>
         <div>
-          <h2>Go beyond musicals</h2>
-          <p class="text--bigger">Theatre lovers can drill-in and find amazing performances using our 12 theatre-specific categories and custom recommendation engine.</p>
+          <h2>Tailor-made</h2>
+          <p class="text--bigger">Theatre lovers can select from our 12 theatre-specific categories in order to find great performances and receive personalised recommendations.</p>
         </div>
         <div>
           <h2>Stay up-to-date</h2>
-          <p class="text--bigger">Follow directors, writers, cast, and venues, so you already know what&rsquo;s on. Be the first to find out about the next big thing.</p>
+          <p class="text--bigger">Follow directors, writers, cast, and venues, so you know what&rsquo;s on. Be the first to find out about any London production however big or small.</p>
         </div>
       </div>
     </section>
