--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com" />
+
+  <meta name="apple-itunes-app" content="app-id=963068912">
 </head>
 <body>
-
   <div class="container  max-width--980  horizontal--center  padding--top-two-spaces">
     <section class="padding--bottom-one-space  show-on-mobile">
       <img src="images/apple-touch-icon.png" alt="" class="appicon  block--inline  vertical-align--middle" />
@@ -49,7 +50,9 @@
 
         <h1 class="padding--top-bottom-one-space">The must-have app for the London theatre lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
-        <p class="text--bigger  text--center  download-button  margin--top-two-spaces">Coming soon for iOS!</p>
+        <p class="text--bigger  margin--top-two-spaces">
+          <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download now for iOS</a>
+        </p>
         <small class="opacity--50  padding--top-half-space">Full support for iOS 7, iPhone 4S and above.</small>
       </div>
     </section>
