changed image for fb/twitter share

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <title>Stagedoor - The must-have app for the London theatre lover</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
+  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/116801469202683881648/" />
+  <meta name="description" content="The must-have app for the London theatre lover" />
 
   <meta property="fb:app_id" content="292523134239015" />
   <meta property="og:type" content="article" />
@@ -14,7 +15,7 @@
   <meta property="og:title" content="The must-have app for the London theatre lover" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:description" content="The must-have app for the London theatre lover" />
-  <meta property="og:image" content="http://stagedoorapp.com/images/apple-touch-icon@2x.png" />
+  <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoortweets" />
@@ -22,7 +23,7 @@
   <meta name="twitter:url" content="http://stagedoorapp.com" />
   <meta name="twitter:title" content="Stagedoor" />
   <meta name="twitter:description" content="The must-have app for the London theatre lover" />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/apple-touch-icon@2x.png" />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
