--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div>
           <h2>Tailor-made</h2>
-          <p class="text--bigger">Theatre lovers can select from our 12 theatre-specific categories in order to find great performances and receive personalised recommendations.</p>
+          <p class="text--bigger">Select from our 12 theatre-specific categories to find great performances and receive personalised recommendations.</p>
         </div>
         <div>
           <h2>Stay up-to-date</h2>
