changed copy of download button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1 class="padding--top-bottom-one-space">The must-have app for the London theatre lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download now for iOS</a>
+          <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
         <small class="opacity--50  padding--top-half-space">Full support for iOS 7, iPhone 4S and above.</small>
       </div>
