verification for Google+

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     </footer>
   </div>
 
+<a href="https://plus.google.com/103141261040431894660" rel="publisher">Google+</a>
 
 
   <!-- JS scripts -->
