removed google+ verification and changed screenshot

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <title>Stagedoor - The must-have app for the London theatre lover</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
+  <link href="https://plus.google.com/103141261040431894660" rel="publisher" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="author" content="https://plus.google.com/116801469202683881648/" />
-  <meta name="description" content="The must-have app for the London theatre lover" />
+  <meta name="author" content="https://plus.google.com/103141261040431894660" />
+  <meta name="description" content="The must-have app for the London theatre lover." />
 
   <meta property="fb:app_id" content="292523134239015" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="http://stagedoorapp.com" />
-  <meta property="og:title" content="The must-have app for the London theatre lover" />
+  <meta property="og:title" content="The must-have app for the London theatre lover." />
   <meta property="og:site_name" content="Stagedoor" />
-  <meta property="og:description" content="The must-have app for the London theatre lover" />
+  <meta property="og:description" content="The must-have app for the London theatre lover." />
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -22,7 +23,7 @@
   <meta name="twitter:creator" content="@stagedoortweets" />
   <meta name="twitter:url" content="http://stagedoorapp.com" />
   <meta name="twitter:title" content="Stagedoor" />
-  <meta name="twitter:description" content="The must-have app for the London theatre lover" />
+  <meta name="twitter:description" content="The must-have app for the London theatre lover." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 
   <meta name="viewport" content="width=device-width" />
@@ -80,7 +81,6 @@
     </footer>
   </div>
 
-<a href="https://plus.google.com/103141261040431894660" rel="publisher">Google+</a>
 
 
   <!-- JS scripts -->
