--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en-gb">
 
 <head>
-  <title>Stagedoor - The must-have app for the London theatre lover</title>
+  <title>Stagedoor - London theatre app</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/103141261040431894660" rel="publisher" />
+  <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
+  <link rel="canonical" href="http://stagedoorapp.com" />
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/103141261040431894660" />
-  <meta name="description" content="The must-have app for the London theatre lover." />
+  <meta name="description" content="Stagedoor: The must-have app for the London theatre lover." />
+  <meta name="viewport" content="width=device-width" />
+  <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="292523134239015" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="http://stagedoorapp.com" />
-  <meta property="og:title" content="The must-have app for the London theatre lover." />
+  <meta property="og:title" content="Stagedoor: The must-have app for the London theatre lover." />
   <meta property="og:site_name" content="Stagedoor" />
-  <meta property="og:description" content="The must-have app for the London theatre lover." />
+  <meta property="og:description" content="Stagedoor: The must-have app for the London theatre lover." />
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -23,14 +28,8 @@
   <meta name="twitter:creator" content="@stagedoortweets" />
   <meta name="twitter:url" content="http://stagedoorapp.com" />
   <meta name="twitter:title" content="Stagedoor" />
-  <meta name="twitter:description" content="The must-have app for the London theatre lover." />
+  <meta name="twitter:description" content="Stagedoor: The must-have app for the London theatre lover." />
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
-
-  <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com" />
-
-  <meta name="apple-itunes-app" content="app-id=963068912">
 </head>
 <body>
   <div class="container  max-width--980  horizontal--center  padding--top-two-spaces">
@@ -55,7 +54,7 @@
         <p class="text--bigger  margin--top-two-spaces">
           <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
-        <small class="opacity--50  padding--top-half-space">Full support for iOS 7, iPhone 4S and above.</small>
+        <small class="opacity--50  padding--top-half-space">Stagedoor supports iOS 7, iPhone 4S and above.</small>
       </div>
     </section>
 
@@ -77,7 +76,7 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
+      &copy; Copyright 2015 Stagedoor <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
     </footer>
   </div>
 
