Google webmaster verification

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="description" content="Stagedoor: The must-have app for the London theatre lover." />
   <meta name="viewport" content="width=device-width" />
   <meta name="apple-itunes-app" content="app-id=963068912">
+  <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
   <meta property="fb:app_id" content="292523134239015" />
   <meta property="og:type" content="article" />
