--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/103141261040431894660" />
   <meta name="description" content="Stagedoor: The must-have app for the London theatre lover." />
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
   <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
