--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
+  <!-- Google Tag Manager -->
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MQWRJJ');</script>
+  <!-- End Google Tag Manager -->
+
   <div class="container  max-width--980  horizontal--center  padding--top-two-spaces">
     <section class="padding--bottom-one-space  show-on-mobile">
       <img src="images/apple-touch-icon.png" alt="" class="appicon  block--inline  vertical-align--middle" />
@@ -87,15 +97,5 @@
   <script type="text/javascript" src="scripts/partials/_retina.min.js"></script>
   <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script-->
   <!--script src="scripts/app.min.js"></script-->
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-58426547-1', 'auto');
-    ga('send', 'pageview');
-  </script>
 </body>
 </html>
