SEO and minor improvements

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
   <title>Stagedoor - London theatre app</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
-  <link href="https://plus.google.com/103141261040431894660" rel="publisher" />
+  <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com" />
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="author" content="https://plus.google.com/103141261040431894660" />
-  <meta name="description" content="Stagedoor: The must-have app for the London theatre lover." />
+  <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
+  <meta name="description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Free for all." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
   <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
-  <meta property="fb:app_id" content="292523134239015" />
-  <meta property="og:type" content="article" />
-  <meta property="og:url" content="http://stagedoorapp.com" />
-  <meta property="og:title" content="Stagedoor: The must-have app for the London theatre lover." />
-  <meta property="og:site_name" content="Stagedoor" />
-  <meta property="og:description" content="Stagedoor: The must-have app for the London theatre lover." />
+  <meta property="fb:app_id" content="794442827269736" />
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+  <meta property="og:title" content="Stagedoor — London theatre app" />
+  <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Like, share, and rate your favourite theatre performances and performers. Free for all." />
+  <meta property="og:url" content="http://stagedoorapp.com" />
+  <meta property="og:site_name" content="Stagedoor" />
+  <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoortweets" />
@@ -45,13 +45,13 @@
 
   <div class="container  max-width--980  horizontal--center  padding--top-two-spaces">
     <section class="padding--bottom-one-space  show-on-mobile">
-      <img src="images/apple-touch-icon.png" alt="" class="appicon  block--inline  vertical-align--middle" />
+      <img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" />
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
     </section>
 
     <section class="cf">
       <div class="float--left  width--40">
-        <img src="images/screenshot.png" alt="stagedoor app theatre screenshot" class="iphone-screenshot" />
+        <img src="images/screenshot.png" alt="stagedoor app theatre london screenshot" class="iphone-screenshot" />
       </div>
 
       <div class="float--right  width--60  margin--top-six-spaces">
@@ -60,7 +60,7 @@
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">The must-have app for the London theatre lover.</h1>
+        <h1 class="padding--top-bottom-one-space">The must-have app for the <strong>London theatre</strong> lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
