--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">The must-have app for the <strong>London theatre</strong> lover.</h1>
+        <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
@@ -87,7 +87,10 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 Stagedoor <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
+      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
+      <div>
+        Stagedoor &hearts; <strong>London theatre</strong>.
+      </div>
     </footer>
   </div>
 
