Added blog link

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
       </div>
     </section>
 
+    <section class="margin--top-bottom-four-spaces  text--center">
+      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="https://medium.com/@Stagedoor/theatre-just-got-a-lot-easier-de6be11f2a27" rel="nofollow">Read our blog &rarr;</a></p>
+      <p>We post theatre-related articles.</p>
+    </section>
+
     <footer class="opacity--50  text--center  padding--bottom-one-space">
       &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
       <div>
