Added Android link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p class="text--bigger  margin--top-two-spaces">
           <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
-        <small class="opacity--50  padding--top-half-space">Stagedoor supports iOS 7, iPhone 4S and above.</small>
+        <small class="opacity--50  padding--top-half-space">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoortweets: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want the Android version?</a></small>
       </div>
     </section>
 
@@ -92,7 +92,7 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank">@stagedoortweets</a> for updates.</span>
+      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank" rel="nofollow">@stagedoortweets</a> for updates.</span>
       <div>
         Stagedoor &hearts; <strong>London theatre</strong>.
       </div>
