--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="itms://itunes.apple.com/gb/app/stagedoor/id963068912" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
+          <a href="https://itunes.apple.com/us/app/stagedoor/id963068912?mt=8&uo=6&at=&ct=" id="appstore-link" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
-        <small class="opacity--50  padding--top-half-space">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoortweets: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want the Android version?</a></small>
+        <small class="opacity--50  padding--top-half-space">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoortweets: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
       </div>
     </section>
 
@@ -81,7 +81,7 @@
         </div>
         <div>
           <h2>Stay up-to-date</h2>
-          <p class="text--bigger">Follow directors, writers, cast, and venues, so you know what&rsquo;s on. Be the first to find out about any London production however big or small.</p>
+          <p class="text--bigger">Follow directors, writers, cast, and venues, so you know what&rsquo;s on. Be the first to find out about any <strong>London production</strong> however big or small.</p>
         </div>
       </div>
     </section>
@@ -103,6 +103,12 @@
 
   <!-- JS scripts -->
   <script type="text/javascript" src="scripts/partials/_retina.min.js"></script>
+  <script>
+    // detect if iPhone/iPad replace iTunes link with direct App Store link
+    if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
+      document.getElementById('appstore-link').href="itms://itunes.apple.com/gb/app/stagedoor/id963068912"
+    }
+  </script>
   <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script-->
   <!--script src="scripts/app.min.js"></script-->
 </body>
