changed @twitter handle

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@stagedoortweets" />
-  <meta name="twitter:creator" content="@stagedoortweets" />
+  <meta name="twitter:site" content="@stagedoorLDN" />
+  <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com" />
   <meta name="twitter:title" content="Stagedoor" />
   <meta name="twitter:description" content="Stagedoor: The must-have app for the London theatre lover." />
@@ -63,9 +63,9 @@
         <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
         <h2>Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Like, share, and rate your favourite theatre performances and performers. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="https://itunes.apple.com/us/app/stagedoor/id963068912?mt=8&uo=6&at=&ct=" id="appstore-link" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
+          <a href="https://itunes.apple.com/us/app/stagedoor/id963068912?mt=8" id="appstore-link" class="download-button  no-link-colour" title="Download now for iOS">Download free for iOS</a>
         </p>
-        <small class="opacity--50  padding--top-half-space">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoortweets: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
+        <small class="opacity--50  padding--top-half-space">iOS 7+, iPhone 4S and above. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
       </div>
     </section>
 
@@ -92,7 +92,7 @@
     </section>
 
     <footer class="opacity--50  text--center  padding--bottom-one-space">
-      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoortweets" target="_blank" rel="nofollow">@stagedoortweets</a> for updates.</span>
+      &copy; Copyright 2015 <span class="hide-on-mobile">&nbsp; &bull; &nbsp;</span> <span class="follow-link-footer">Follow <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow">@stagedoorLDN</a> for updates.</span>
       <div>
         Stagedoor &hearts; <strong>London theatre</strong>.
       </div>
