--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com" />
 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
   <meta name="description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Free for all." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -87,7 +87,7 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  text--center">
-      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="https://medium.com/@Stagedoor/theatre-just-got-a-lot-easier-de6be11f2a27" rel="nofollow">Read our blog &rarr;</a></p>
+      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="https://medium.com/@Stagedoor/why-exploring-new-theatre-shouldn-t-feel-like-a-gamble-9b9c0c432230" rel="nofollow">Read our blog &rarr;</a></p>
       <p>We post theatre-related articles.</p>
     </section>
 
