added mixpanel code for partner

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
       <div>
         Stagedoor &hearts; <strong>London theatre</strong>.
       </div>
+
+      <br/><a href="https://mixpanel.com/f/partner" target="_blank" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
     </footer>
   </div>
 
