--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  text--center">
-      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="https://medium.com/@Stagedoor/stagedoor-discussions-francesca-mepham-and-terry-eastham-2d0349ba60e6" rel="nofollow">Read our blog &rarr;</a></p>
+      <p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="hhttps://medium.com/@Stagedoor/stagedoor-discussions-emma-kay-and-sarah-mcpartlan-4183e182986c#.k25piq1to" rel="nofollow">Read our blog &rarr;</a></p>
       <p>We post theatre-related articles.</p>
     </section>
 
